feat: update feature generator